--- a/angular.json
+++ b/angular.json
@@ -42,22 +42,27 @@
             ]
           },
           "configurations": {
-            "production": {
-              "budgets": [
-               {
-                "type": "initial",
-                "maximumWarning": "2mb",
-                "maximumError": "3mb"
+              "production": {
+                "fileReplacements": [
+                  {
+                    "replace": "src/environments/environment.ts",
+                    "with": "src/environments/environment.prod.ts"
+                  }
+                ],
+                "budgets": [
+                  {
+                    "type": "initial",
+                    "maximumWarning": "2mb",
+                    "maximumError": "3mb"
+                  },
+                  {
+                    "type": "anyComponentStyle",
+                    "maximumWarning": "2mb",
+                    "maximumError": "4mb"
+                  }
+                ],
+                "outputHashing": "all"
               },
-              {
-                "type": "anyComponentStyle",
-                "maximumWarning": "2mb",
-                "maximumError": "4mb"
-              }
-
-              ],
-              "outputHashing": "all"
-            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
